openshift/deployments/prod/mem-sizing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-runner
spec:
  template:
    spec:
      containers:
      - name: k8s-java-runner
        resources:
          limits:
            cpu: "2"
            memory: "4Gi"
          requests:
            memory: "2Mi"
            cpu: "1"
