openshift/deployments/prod/ingress-route.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    description: "Java Runner Route for Openshift Router"
  name: java-runner
  labels:
    app: java-runner
spec:
  rules:
  - host: quarkus-notes.apps.kubernetes.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: java-runner-service
            port:
              number: 80
